añadidas validaciones de eliminacion de raees, observaciones de componentes y demas
